--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -9,13 +9,12 @@ lerna-debug.log*
 
 node_modules
 dist
-.vscode
 dist-ssr
 *.local
 
 # Editor directories and files
 .vscode/*
-.vscode/extensions.json
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
